[package]
name = "actix-ws"
version = "0.3.0"
description = "WebSockets for Actix Web, without actors"
categories = ["web-programming::websocket"]
keywords = ["actix", "web", "websocket", "websockets", "streaming"]
authors = [
    "asonix <asonix@asonix.dog>",
    "Rob Ede <robjtede@icloud.com>",
]
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
actix-codec = "0.5"
actix-http = { version = "3", default-features = false, features = ["ws"] }
actix-web = { version = "4", default-features = false }
bytestring = "1"
futures-core = "0.3.17"
tokio = { version = "1.24", features = ["sync"] }

[dev-dependencies]
actix-web = "4.8"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
tokio = { version = "1.24", features = ["sync", "rt", "macros"] }
tracing = "0.1.30"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
