[package]
name = "tracing-actix-web"
version = "0.8.0"
authors = ["Luca Palmieri <rust@lpalmieri.com>", "Yuki Okushi <jtitor@2k36.org>"]
documentation = "https://docs.rs/tracing-actix-web/"
readme = "README.md"
description = "Structured logging middleware for actix-web."
keywords = ["http", "actix-web", "tracing", "logging"]
categories = ["asynchronous", "web-programming"]
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["emit_event_on_error"]
emit_event_on_error = []
uuid_v7 = ["uuid/v7"]

[dependencies]
actix-web = { version = "4", default-features = false }
pin-project = "1.1.13"
tracing = "0.1.44"
uuid = { version = "1.23", features = ["v4"] }

[dev-dependencies]
actix-web = { version = "4", default-features = false, features = ["macros"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.0"
tracing-log = "0.2"
