[package]
name = "amqp-codec"
version = "0.1.0"
description = "AMQP 1.0 Protocol Codec"
authors = ["Nikolay Kim <fafhrd91@gmail.com>", "Max Gortman <mgortman@microsoft.com>", "Mike Yagley <myagley@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
actix-codec = "0.2.0"
bytes = "0.5.2"
byteorder = "1.3.1"
bytestring = "0.1.1"
chrono = "0.4"
derive_more = "0.99.2"
fxhash = "0.2.1"
ordered-float = "1.0"
uuid = { version = "0.8", features = ["v4"] }

[build-dependencies]
handlebars = { version = "0.27", optional = true }
serde        = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
serde_json   = { version = "1.0", optional = true }
lazy_static  = { version = "1.0", optional = true }
regex = { version = "1.3", optional = true }

[features]
default = []

from-spec = ["handlebars", "serde", "serde_derive", "serde_json", "lazy_static", "regex"]
