[package]
name = "custom-root-span"
version = "0.1.0"
authors = ["LukeMathWalker <contact@lpalmieri.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
opentelemetry = "0.30"
opentelemetry-otlp = { version = "0.30", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio-current-thread"] }
opentelemetry-semantic-conventions = "0.30"
tracing-opentelemetry = "0.31"
tracing = "0.1"
tracing-actix-web = { path = "../..", features = ["opentelemetry_0_30"] }
tracing-bunyan-formatter = "0.3"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
