[package]
name = "otel"
version = "0.1.0"
authors = ["Luca Palmieri <rust@lpalmieri.com>"]
edition = "2021"

license = "MIT/Apache-2.0"

[dependencies]
actix-web = "4"
opentelemetry = "0.30"
opentelemetry-otlp = { version = "0.30", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio-current-thread"] }
opentelemetry-semantic-conventions = "0.30"
tracing = "0.1"
tracing-actix-web = { path = "../..", features = ["opentelemetry_0_30"] }
tracing-bunyan-formatter = "0.3"
tracing-opentelemetry = "0.31"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
