[package]
name = "prost-example"
version = "0.5.1"
edition = "2018"
authors = [
    "kingxsp <jin.hb.zh@outlook.com>",
    "Yuki Okushi <huyuumi.dev@gmail.com>"
]

[dependencies]
actix-web = "3.0.0"
actix-protobuf = { path = "../../" }

bytes = "0.5"
env_logger = "0.7"
prost = "0.6.0"
prost-derive = "0.6.0"
