[package]
name = "prost-example"
version = "0.5.1"
edition = "2018"
authors = [
    "kingxsp <jin.hb.zh@outlook.com>",
    "Yuki Okushi <huyuumi.dev@gmail.com>"
]

[dependencies]
actix-web = "4"
actix-protobuf = { path = "../../" }

env_logger = "0.8"
prost = { version = "0.8", default_features = false, features = ["prost-derive"] }
