[package]
name = "otel"
version = "0.1.0"
authors = ["Luca Palmieri <rust@lpalmieri.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
actix-web = "4"
opentelemetry = "0.32"
opentelemetry-otlp = { version = "0.32", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio-current-thread"] }
opentelemetry-semantic-conventions = "0.32"
tracing = "0.1"
tracing-actix-web = { path = "../.." }
tracing-actix-web-opentelemetry = { path = "../../../tracing-actix-web-opentelemetry" }
tracing-bunyan-formatter = "0.3"
tracing-opentelemetry = "0.33"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
